<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>map2gazebo2</name>
  <version>0.0.0</version>
  <description>The map2gazebo2 package for ros2</description>
  <maintainer email="moritz.willmann@uni-ulm.de">Moritz Willmann</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
